data/diff_tests/wasmtime/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1991.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\96\80\80\80\00\01\03\65\6e"
    "\76\0e\66\75\6e\63\5f\77\69\74\68\5f\6c\6f\6f\70"
    "\00\00\03\82\80\80\80\00\01\01\0a\8c\80\80\80\00"
    "\01\86\80\80\80\00\00\41\01\10\00\0b"
  )
""
)